syntax = "proto3";

package co.topl.grpc.models;

import 'models/common.proto';
import 'models/address.proto';
import 'models/proof.proto';

message Box {
  TypedEvidence evidence = 1;
  BoxValue value = 2;

  message Id {
    TransactionId transactionId = 1;
    int32 transactionOutputIndex = 2;
  }
}

message BoxValue {
  oneof sealed_value {
    EmptyBoxValue empty = 1;
    PolyBoxValue poly = 2;
    ArbitBoxValue arbit = 3;
    DionAssetBoxValue asset = 4;
    OperatorRegistrationBoxValue operatorRegistration = 5;
  }
}

message EmptyBoxValue {}
message PolyBoxValue {
  Int128 quantity = 1;
}
message ArbitBoxValue {
  Int128 quantity = 1;
}
message DionAssetBoxValue {
  Int128 quantity = 1;
  Code assetCode = 2;
  bytes securityRoot = 3;
  Metadata metadata = 4;

  message Code {
    int32 version = 1;
    SpendingAddress issuerAddress = 2;
    bytes shortName = 3;
  }
  message Metadata {
    bytes metadata = 1;
  }
}
message OperatorRegistrationBoxValue {
  ProofKnowledgeKesProduct vrfCommitment = 1;
}
